--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,9 +1,12 @@
 
 // Colors
 $primaryColor: #9356DC;
+$primaryColorLight: lighten(#9356DC, 5%);
+
 $secondaryColor: #FF79DA;
+$secondaryColorLight: lighten(#FF79DA, 5%);
 $thirdColor: #99E2D0;
-$gray: #f6f6f6;
+$gray: #f7f7f7;
 
 
 // Fonts
