--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,58 +1,104 @@
-.footer__txt, .footer, .restaurant__list, .restaurant, .operation__steps, .operation, .presentation {
+.footer__txt, .restaurant__list, .operation__steps {
   display: flex;
   flex-direction: column;
 }
-.restaurant__card, .step__box {
+.footer, .menu, .restaurant, .operation, .presentation {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  padding-bottom: 50px;
+}
+
+.plate-card__check i, .plate-card, .restaurant__card, .step__box {
   border-radius: 20px;
 }
 
-.bg--gray {
-  background-color: #f6f6f6;
-}
-.bg--gray--darker {
-  background: #dddddd;
-}
-.bg--dark {
-  background: #5d5d5d;
+.plate-card, .restaurant__card, .step__box {
+  -webkit-box-shadow: 0px 10px 13px -7px #dedede, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #dedede, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 
 .btn {
   padding: 15px;
-  width: max-content;
   border-radius: 50px;
   color: white;
-  font-size: bold;
-}
-.btn--primary {
+  font-weight: bold;
+  text-align: center;
   background-color: #9356DC;
-}
-.btn--center {
   align-self: center;
 }
 
+.btn {
+  -webkit-box-shadow: 0px 10px 13px -7px #dedede, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #848484, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+}
+
+.btn {
+  background: #FF79DA;
+  background: -moz-linear-gradient(top, #FF79DA 0%, #9356DC 100%);
+  background: -webkit-linear-gradient(top, #FF79DA 0%, #9356DC 100%);
+  background: linear-gradient(to bottom, #FF79DA 0%, #9356DC 100%);
+}
+
+.btn:hover {
+  background: #ff93e1;
+  background: -moz-linear-gradient(top, #ff93e1 0%, #a16be0 100%);
+  background: -webkit-linear-gradient(top, #ff93e1 0%, #a16be0 100%);
+  background: linear-gradient(to bottom, #ff93e1 0%, #a16be0 100%);
+}
+
+.presentation__text__description, .description {
+  color: #848484;
+  font-weight: 100;
+}
+
+.bg--gray {
+  background-color: #f7f7f7;
+}
+.bg--gray--darker {
+  background: #dedede;
+}
+.bg--dark {
+  background: #5e5e5e;
+}
+
+.btn {
+  width: 55%;
+  font-size: 1.03rem;
+}
 .step__box {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   width: 90%;
   height: 25%;
-  border: 1px solid #f6f6f6;
-  background: #f6f6f6;
+  border: 1px solid #f7f7f7;
+  background: #f7f7f7;
 }
 .step__box__nb {
   padding: 5px;
   width: 13px;
-  border: 1px solid #f6f6f6;
+  height: 13px;
+  border: 1px solid #f7f7f7;
   border-radius: 100%;
   position: relative;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   text-align: center;
   color: white;
   margin-left: -10px;
   background-color: #9356DC;
 }
+.step__box__nb p {
+  position: relative;
+  bottom: 2px;
+}
 .step__box p {
   margin: 5%;
+}
+
+.restaurant__img {
+  position: relative;
+  z-index: -9999;
 }
 
 .restaurant__card {
@@ -70,7 +116,7 @@
   grid-area: 1/1/3/3;
 }
 .restaurant__card__img img {
-  height: 225px;
+  height: calc(100%*width);
   width: 100%;
   overflow: visible;
   border-top-left-radius: 20px;
@@ -96,6 +142,7 @@
 .restaurant__card__fav--checked {
   font-size: 25px;
   color: #9356DC;
+  display: none;
 }
 .restaurant__card__fav i {
   font-size: 25px;
@@ -112,18 +159,115 @@
   background-color: #99E2D0;
   color: #1b6150;
 }
+.restaurant__card:hover .restaurant__card__fav--checked {
+  display: block;
+}
+.restaurant__card:hover .restaurant__card__fav--unchecked {
+  display: none;
+}
+
+.plate-card {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 18px;
+  padding: 15px;
+  width: 90%;
+  background-color: white;
+  transition: all 1.5s;
+}
+.plate-card:hover .plate-card__content {
+  width: 65%;
+}
+.plate-card:hover .plate-card__check {
+  display: block;
+  transform: width(100%);
+  width: 20%;
+  margin: -15px;
+  border-radius: 0px 20px 20px 0px;
+  background-color: #99E2D0;
+  display: flex;
+}
+.plate-card:hover .plate-card__check i {
+  display: block;
+}
+.plate-card__check {
+  width: 0%;
+  -webkit-transition: width 1s ease-in-out;
+  -moz-transition: width 1s ease-in-out;
+  -o-transition: width 1s ease-in-out;
+  transition: width 1s ease-in-out;
+}
+.plate-card__check i {
+  display: none;
+  margin: auto;
+  line-height: 1.5;
+  text-align: center;
+  width: 23px;
+  height: 23px;
+  color: #99E2D0;
+  background-color: white;
+}
+.plate-card__content {
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
+  width: 90%;
+  max-width: 100%;
+  -webkit-transition: width 0.8s ease-in-out;
+  -moz-transition: width 0.8s ease-in-out;
+  -o-transition: width 0.8s ease-in-out;
+  transition: width 0.8s ease-in-out;
+}
+.plate-card__text {
+  max-width: max-content;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.plate-card__text--heading {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.plate-card__text--description {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  color: #848484;
+  font-weight: 100;
+  margin-top: 3px;
+  padding-right: 5px;
+}
+.plate-card__price {
+  width: 10%;
+  text-align: end;
+  align-self: flex-end;
+}
 
 .fav--checked {
   font-weight: bold;
   color: #9356DC;
 }
 
+.underline {
+  width: 50px;
+  height: 4px;
+  background-color: #99E2D0;
+  margin-top: -12px;
+}
+
 * {
   font-family: "Roboto";
 }
 
-.txt--heading {
-  font-size: 1.1rem;
+a {
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.txt--heading, .meal-parts__heading {
+  font-size: 1.15rem;
   font-weight: bold;
 }
 .txt--bold {
@@ -136,11 +280,14 @@
   text-align: center;
 }
 .txt--light {
-  color: #838383;
+  color: #848484;
+}
+.txt--uppercase, .meal-parts__heading {
+  text-transform: uppercase;
 }
 
 .heading {
-  font-size: 1.1rem;
+  font-size: 1.15rem;
   font-weight: bold;
 }
 
@@ -152,43 +299,91 @@ body {
   margin: 0px;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 10px;
+  height: 35px;
+}
+.header__back {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.header__heading {
+  font-family: "Shrikhand";
+  font-size: 2rem;
+  font-weight: bold;
+  margin: auto;
+}
+
+.restaurant__img {
+  width: 100%;
+  height: calc(100%*width);
+}
+
 .presentation {
-  padding-bottom: 50px;
   text-align: center;
+  padding-top: 0px;
 }
 .presentation__localisation {
-  padding: 1px;
+  background-color: #eaeaea;
+  margin-left: -10px;
+  margin-right: -10px;
+  box-shadow: inset 0px 3px 3px 0px #c4c4c4, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
-.presentation__txt {
+.presentation__localisation p i {
+  margin-right: 15px;
+}
+.presentation__text {
   padding: 20px;
 }
-.presentation__txt--heading {
+.presentation__text__heading {
   font-weight: bold;
   font-size: 1.7em;
 }
-
-.operation {
-  padding: 10px;
-  padding-bottom: 50px;
+.presentation__text__description {
+  margin-top: 0px;
 }
+
 .operation__steps {
   align-items: center;
   justify-content: space-around;
   height: 300px;
 }
 
-.restaurant {
-  padding: 10px;
-  padding-bottom: 50px;
-}
 .restaurant__list {
   align-items: center;
 }
 
-.footer {
-  padding: 15px;
-  padding-bottom: 25px;
+.menu {
+  margin-top: -25px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
 }
+.menu__heading {
+  font-family: "Shrikhand";
+  font-size: 1.7rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu__heading i {
+  margin-right: 25px;
+}
+.menu__command {
+  margin-top: 50px;
+  width: 50%;
+}
+
+.meal-parts {
+  margin-bottom: 45px;
+}
+.meal-parts__heading {
+  color: #848484;
+}
+
 .footer__heading {
   color: white;
 }
