--- a/sass/component/components.scss
+++ b/sass/component/components.scss
@@ -1,18 +1,13 @@
 .btn {
+    @extend %rounded-btn;
+    @extend %btn-shadow;
+    @extend %gradiant-btn;
+    width: 55%;
+    font-size: 1.03rem;
+    &:hover { 
+        @extend %lighten-gradiant;
 
-    padding: 15px;
-    width: max-content;
-    border-radius: 50px;
-    color: white;
-    font-size: bold;
-    // TODO : shadow + bg-radiant 
-    &--primary {
-        background-color: $primaryColor;
     }
-    &--center {
-        align-self: center;
-    }
- 
 }
 
 .step__box {
@@ -25,27 +20,37 @@
     border: 1px solid $gray;
     background: $gray;
     @extend %rounded-border;
+    @extend %box-shadow;
 
 
     &__nb {
         padding: 5px;
         width: 13px;
+        height: 13px;
         border: 1px solid $gray;
         border-radius: 100%;
         position: relative;
 
-        font-size: 0.9rem;
+        font-size: 0.85rem;
         text-align: center;
         color: white;
 
         margin-left: -10px;
         background-color: $primaryColor;
+        p {
+            position: relative;
+            bottom: 2px;
+        }
+
     }
     p {
         margin: 5%;
     }
 }
-
+.restaurant__img {
+    position: relative;
+    z-index: -9999;
+}
 
     .restaurant__card {
         display: grid;
@@ -58,15 +63,14 @@
         max-width: $max-width-cards;
         margin-bottom: 20px;
         background-color: white;
-
-        // border: 1px solid #FFF;
-        // TODO : Card shadow
+        @extend %box-shadow;
         @extend %rounded-border;
 
             &__img { 
                 grid-area: 1 / 1 / 3 / 3;
                 img{
-                    height: 225px;
+                    // height: 225px;
+                    height: calc(100%*width);
                     width: 100%;
                     overflow: visible;
 
@@ -94,6 +98,7 @@
                 &--checked{
                     font-size: 25px;
                     color: $primaryColor;
+                    display: none;
                 }
                 i {
                     font-size: 25px;
@@ -102,7 +107,6 @@
             &__new { 
                 grid-area: 1 / 2 / 2 / 3;
                 p {
-                    // height: 25px;
                     width: 80%;
                     padding: 5px;
                     border: 1px solid $thirdColor;
@@ -110,11 +114,137 @@
                     text-align: center;
                     background-color: $thirdColor;
                     color: darken($thirdColor, 50%);
-                    
                 }
             } 
+
+            &:hover {
+                .restaurant__card__fav {
+                    &--checked {
+                        display: block;
+                    }
+                    &--unchecked {
+                        display: none;
+                    }
+                }
+            }
     }
+
+
+    .plate-card {
+        
+        display: flex;
+        justify-content: space-between;
+        margin-top: 18px;
+        padding: 15px;
+        width: 90%;
+        // height: 45px;
+        @extend %rounded-border;
+        @extend %box-shadow;
+    
+        background-color: white;
+        transition: all 1.5s;
+        &:hover {
+           
+            .plate-card__content {
+                width: 65%;
+            }
+            .plate-card__check {
+                display: block;
+                transform: width(100%);
+                width: 20%;
+                margin: -15px;
+                border-radius: 0px  $radius $radius 0px ;
+                background-color: $thirdColor;
+                display: flex;
+                i {
+                    display: block;
+
+                }
+            }
+        }
+       
+        &__check {
+            // For hide
+            // display: none;
+            width: 0%;
+            -webkit-transition: width 1s ease-in-out;
+            -moz-transition: width 1s ease-in-out;
+            -o-transition: width 1s ease-in-out;
+            transition: width 1s ease-in-out;
+       
+            i {
+                @extend %rounded-border;
+                display: none;
+                margin: auto;
+                line-height: 1.5;
+                text-align: center;
+                width: 23px;
+                height: 23px;
+                color: $thirdColor;
+                background-color: white;
+
+              
+            }
+        }
+     &__content {
+            display: flex;
+            justify-content: space-between;
+            white-space: nowrap;
+            // width: 65%; //! WHEN CHECK 
+            width: 90%; //! WHEN NORMAL 
+            max-width: 100%;
+
+            -webkit-transition: width 0.8s ease-in-out;
+            -moz-transition: width 0.8s ease-in-out;
+            -o-transition: width 0.8s ease-in-out;
+            transition: width 0.8s ease-in-out;
+        }
+        &__text {
+            max-width: max-content;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis; 
+            &--heading { 
+
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis; 
+            }
+            &--description {
+               
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis; 
+                color: darken($gray, 45%);
+                font-weight: 100;
+                margin-top: 3px ;
+               
+                padding-right: 5px;
+    
+                }
+            }
+        &__price {
+            width: 10%;
+            text-align: end;
+            align-self: flex-end;
+         }
+       
+    } 
+
+
+
+
 .fav--checked {
     font-weight: bold;
     color: $primaryColor;
+}
+.description {
+    @extend %text-light;
+}
+
+.underline {
+    width: 50px;
+    height: 4px;
+    background-color: $thirdColor;
+    margin-top: -12px;
 }
