--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,12 @@
 @import "utils/variables.scss";
+@import "utils/mixins.scss";
 @import "utils/extentions.scss";
 @import "base/base.scss";
 
 @import "component/components.scss";
 @import "component/text.scss";
 @import "layout/layout.scss";
+@import "pages/page_restaurants.scss";
 
 
 
