--- a/sass/component/components.scss
+++ b/sass/component/components.scss
@@ -1,19 +1,46 @@
-.btn {
-    @extend %rounded-btn;
-    @extend %btn-shadow;
-    @extend %gradiant-btn;
-    width: 55%;
-    font-size: 1.03rem;
-    &:hover { 
-        @extend %lighten-gradiant;
-
+// LOADER
+.main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.blur {
+    animation: blur 2.6s;
+}
+* {
+    font-family: $default;
+}
+a {
+    text-decoration: none;
+    margin-bottom: 10px;
+    color: black;
+}
+.txt {
+    &--heading {
+        font-size: 1.15rem;
+        font-weight: bold;
+    }
+    &--bold {
+        font-weight: bold;
+    }
+    &--title {
+        font-family: $title;
+    }
+    &--center {
+        text-align: center;
+    }
+    &--light {
+        color: darken($gray, 45%);
+    }
+    &--uppercase {
+        text-transform: uppercase;
     }
 }
 
 .step__box {
     display: flex;
-    align-items: center;
     justify-content: flex-start;
+    align-items: center;
     width: 90%;
     height: 25%;
 
@@ -21,230 +48,290 @@
     background: $gray;
     @extend %rounded-border;
     @extend %box-shadow;
-
-
+    p {
+        margin: 5%;
+    }
     &__nb {
         padding: 5px;
         width: 13px;
         height: 13px;
+        position: relative;
+        margin-left: -10px;
+
+        background-color: $primaryColor;
         border: 1px solid $gray;
         border-radius: 100%;
-        position: relative;
-
-        font-size: 0.85rem;
         text-align: center;
+        font-size: 0.85rem;
         color: white;
-
-        margin-left: -10px;
-        background-color: $primaryColor;
         p {
             position: relative;
             bottom: 2px;
         }
+    }
 
-    }
-    p {
-        margin: 5%;
-    }
-}
-.restaurant__img {
-    position: relative;
-    z-index: -9999;
 }
 
-    .restaurant__card {
-        display: grid;
-        grid-template-columns: 66fr 33fr;
-        grid-template-rows: repeat(2, 1fr) 0.75fr;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px; 
+.restaurant__card {
+    display: grid;
+    grid-template-columns: 66fr 33fr;
+    grid-template-rows: 100fr 100fr 50fr;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
 
-        width: 90%;
-        max-width: $max-width-cards;
-        margin-bottom: 20px;
-        background-color: white;
-        @extend %box-shadow;
-        @extend %rounded-border;
+    width: 90%;
+    max-width: 500px;
+    margin-bottom: 20px;
+    background-color: white;
+    @extend %box-shadow;
+    @extend %rounded-border;
 
-            &__img { 
-                grid-area: 1 / 1 / 3 / 3;
-                img{
-                    // height: 225px;
-                    height: calc(100%*width);
-                    width: 100%;
-                    overflow: visible;
-
-                    border-top-left-radius: $radius;
-                    border-top-right-radius: $radius;
-                }
-            }
-            &__txt { 
-                grid-area: 3 / 1 / 4 / 2;
-                padding-left: 10px;
-                line-height: 5px;
-                margin: auto;
-                margin-left: 10px;
-                h3 {
-                    overflow: visible;
-                }
-            }
-            &__fav { 
-                grid-area: 3 / 2 / 4 / 3;
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-                
-                padding-right: 20px;
-                &--checked{
-                    font-size: 25px;
-                    color: $primaryColor;
-                    display: none;
-                }
-                i {
-                    font-size: 25px;
-                }
-            }
-            &__new { 
-                grid-area: 1 / 2 / 2 / 3;
-                p {
-                    width: 80%;
-                    padding: 5px;
-                    border: 1px solid $thirdColor;
-                    border-radius: 2px;
-                    text-align: center;
-                    background-color: $thirdColor;
-                    color: darken($thirdColor, 50%);
-                }
-            } 
-
-            &:hover {
-                .restaurant__card__fav {
-                    &--checked {
-                        display: block;
-                    }
-                    &--unchecked {
-                        display: none;
-                    }
-                }
-            }
+    &__img {
+        grid-area: 1 / 1 / 3 / 3;
+        img {
+            height: 250px;
+            width: 100%;
+            overflow: visible;
+            border-top-left-radius: $radius;
+            border-top-right-radius: $radius;
+        }
+    }
+    &__txt {
+        grid-area: 3 / 1 / 4 / 2;
+        padding-left: 10px;
+        line-height: 5px;
+        margin-left: 10px;
+        h3 {
+            overflow: visible;
+        }
+        p {
+            @extend %text-light;
+        }
+    }
+    &__fav {
+        grid-area: 3 / 2 / 4 / 3;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding-right: 20px;
+        z-index: 99999;
+        &--checked {
+            font-size: 25px;
+            color: $primaryColor;
+            position: absolute;
+            opacity: 0;
+            z-index: 100;
+        }
+        &--unchecked {
+            position: absolute;
+            opacity: 1;
+        }
+        i {
+            font-size: 25px;
+        }
+    }
+    &__new {
+        grid-area: 1 / 2 / 2 / 3;
+        p {
+            width: 80%;
+            padding: 5px;
+            text-align: center;
+            color: darken($thirdColor, 50%);
+            background-color: $thirdColor;
+            border: 1px solid $thirdColor;
+            border-radius: 2px;
+        }
     }
 
+    &:active {
+        .restaurant__card__fav {
+            &--unchecked {
+                animation: togggleFav 0.25s forwards ease-in-out;
+            }
+            &--checked {
+                animation: 0.25s togggleFav 0.25s reverse forwards ease-in-out;
+            }
+        }
+    }
+    @media(min-width: $tab-width) {
+        &:hover {
+            .restaurant__card__fav {
+                &--unchecked {
+                    animation: togggleFav 0.25s forwards ease-in-out;
+                }
+                &--checked {
+                    animation: 0.25s togggleFav 0.25s reverse forwards ease-in-out;
+                }
+            }
+        }
+    }
+}
 
-    .plate-card {
-        
+.plate-card {
+    background-color: white;
+    @extend %rounded-border;
+    @extend %box-shadow;
+
+    display: flex;
+    justify-content: space-between;
+    justify-self: center;
+    margin-top: 18px;
+    padding: 15px;
+    width: 90%;
+
+    &__content {
         display: flex;
         justify-content: space-between;
-        margin-top: 18px;
-        padding: 15px;
         width: 90%;
-        // height: 45px;
-        @extend %rounded-border;
-        @extend %box-shadow;
-    
-        background-color: white;
-        transition: all 1.5s;
+
+        white-space: nowrap;
+        transition: width 0.5s;
+    }
+    &__check {
+        display: flex;
+        width: 0;
+        margin: -15px;
+        background-color: $thirdColor;
+        border-radius: 0 $radius $radius 0;
+        transition: width 0.5s;
+        i {
+            @extend %rounded-border;
+            overflow: hidden;
+            width: 23px;
+            height: 23px;
+            margin: auto;
+
+            line-height: 1.5;
+            text-align: center;
+            color: $thirdColor;
+            background-color: white;
+
+            transition: visibility 2s;
+        }
+    }
+    &__text {
+        max-width: max-content;
+        @include txtEllipsis;
+        &--heading {
+            @include txtEllipsis;
+        }
+        &--description {
+            margin-top: 3px;
+            padding-right: 5px;
+
+            @include txtEllipsis;
+            color: darken($gray, 45%);
+            font-weight: 100;
+        }
+    }
+    &__price {
+        align-self: flex-end;
+        width: 10%;
+        text-align: end;
+        margin-right: 10px;
+    }
+    &:active {
+        .plate-card__content {
+            width: 60%;
+        }
+        .plate-card__check {
+            width: 15%;
+            i {
+                animation: roll 0.5s forwards;
+            }
+        }
+    }
+    @media(min-width: $tab-width) {
+        width: 285px;
         &:hover {
-           
+            width: 285px;
             .plate-card__content {
-                width: 65%;
+                width: 60%;
             }
             .plate-card__check {
-                display: block;
-                transform: width(100%);
-                width: 20%;
-                margin: -15px;
-                border-radius: 0px  $radius $radius 0px ;
-                background-color: $thirdColor;
-                display: flex;
+                width: 15%;
                 i {
-                    display: block;
-
+                    animation: roll 0.5s forwards;
                 }
             }
         }
-       
-        &__check {
-            // For hide
-            // display: none;
-            width: 0%;
-            -webkit-transition: width 1s ease-in-out;
-            -moz-transition: width 1s ease-in-out;
-            -o-transition: width 1s ease-in-out;
-            transition: width 1s ease-in-out;
-       
-            i {
-                @extend %rounded-border;
-                display: none;
-                margin: auto;
-                line-height: 1.5;
-                text-align: center;
-                width: 23px;
-                height: 23px;
-                color: $thirdColor;
-                background-color: white;
-
-              
-            }
-        }
-     &__content {
-            display: flex;
-            justify-content: space-between;
-            white-space: nowrap;
-            // width: 65%; //! WHEN CHECK 
-            width: 90%; //! WHEN NORMAL 
-            max-width: 100%;
-
-            -webkit-transition: width 0.8s ease-in-out;
-            -moz-transition: width 0.8s ease-in-out;
-            -o-transition: width 0.8s ease-in-out;
-            transition: width 0.8s ease-in-out;
-        }
-        &__text {
-            max-width: max-content;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis; 
-            &--heading { 
-
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis; 
-            }
-            &--description {
-               
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis; 
-                color: darken($gray, 45%);
-                font-weight: 100;
-                margin-top: 3px ;
-               
-                padding-right: 5px;
-    
-                }
-            }
-        &__price {
-            width: 10%;
-            text-align: end;
-            align-self: flex-end;
-         }
-       
-    } 
-
-
-
-
-.fav--checked {
-    font-weight: bold;
-    color: $primaryColor;
-}
-.description {
-    @extend %text-light;
+    }
 }
 
-.underline {
-    width: 50px;
-    height: 4px;
+
+#spinner {
+    visibility: visible;
+    display: flex;
+    height: 50px;
+    width: 100%;
+
+    z-index: 99999;
+    position: absolute;
+    top: 350px;
+    left: 50px;
+    .ball-- {
+        &1 {
+            background-color: $primaryColor;
+            opacity: 100%;
+            @extend %spin-ball;
+        }
+        &2 {
+            background-color: $secondaryColor;
+            opacity: 90%;
+            @extend %spin-ball;
+        }
+        &3 {
+            background-color: $thirdColor;
+            opacity: 80%;
+            @extend %spin-ball;
+        }
+        &4 {
+            background-color: $primaryColor;
+            opacity: 70%;
+            @extend %spin-ball;
+        }
+        &5 {
+            background-color: $secondaryColor;
+            opacity: 60%;
+            @extend %spin-ball;
+        }
+        &6 {
+            background-color: $thirdColor;
+            opacity: 50%;
+            @extend %spin-ball;
+        }
+        &7 {
+            background-color: $primaryColor;
+            opacity: 40%;
+            @extend %spin-ball;
+        }
+        &8 {
+            background-color: $secondaryColor;
+            opacity: 30%;
+            @extend %spin-ball;
+        }
+    }
+}
+
+.vertical-bar {
+    display: none;
+    align-self: center;
+    width: 2px;
+    height: 225px;
     background-color: $thirdColor;
-    margin-top: -12px;
 }
+
+.btn--primary {
+    @extend %rounded-btn;
+    @extend %btn-shadow;
+    @extend %gradiant-btn;
+    width: 55%;
+    max-width: 250px;
+    font-size: 1.03rem;
+    transition: all 0.5s;
+    &:hover {
+		transition: all 0.5s;
+        animation: hoverBtn 0.5s forwards;
+    }
+}
+
