--- a/sass/utils/placeholders.scss
+++ b/sass/utils/placeholders.scss
@@ -1,16 +1,31 @@
+
+
+// Flex and layout
 %flex-column {
     display: flex;
     flex-direction: column;
-    &-center {
-        align-items: center;
-    }
 }
-
 %column-box {
     display: flex;
     flex-direction: column;
     padding: 10px;
     padding-bottom: 50px;
+}
+
+
+// Style and color
+%bg {
+    &--gray{
+        background-color: $gray;
+    }
+    &--dark {
+        background: darken($gray,75%);   
+    }
+}
+
+%text-light {
+    color: darken($gray, 45%);
+    font-weight: 100;
 }
 
 %rounded-border {
@@ -22,28 +37,18 @@
     box-shadow: 0px 10px 13px -7px darken($gray, 10%), 5px 5px 15px 5px rgba(0,0,0,0);
 }
 
-
-%rounded-btn {
-    padding: 15px;
-    // width: max-content;
-    border-radius: 50px;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    background-color: $primaryColor;
-    align-self: center;
-}
-
 %btn-shadow {
     -webkit-box-shadow: 0px 10px 13px -7px darken($gray, 10%), 5px 5px 15px 5px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px darken($gray, 45%), 5px 5px 15px 5px rgba(0,0,0,0);
 } 
+
 %gradiant-btn {
     background: #FF79DA;
     background: -moz-linear-gradient(top, #FF79DA 0%, #9356DC 100%);
     background: -webkit-linear-gradient(top, #FF79DA 0%, #9356DC 100%);
     background: linear-gradient(to bottom, #FF79DA 0%, #9356DC 100%);
 } 
+
 %lighten-gradiant {
     background: $secondaryColorLight;
     background: -moz-linear-gradient(top, $secondaryColorLight 0%, $primaryColorLight 100%);
@@ -52,9 +57,23 @@
 }
 
 
-%text-light {
-    color: darken($gray, 45%);
-    font-weight: 100;
+// Component placeholder
+
+%rounded-btn {
+    padding: 15px;
+    border-radius: 50px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    background-color: $primaryColor;
+    align-self: center;
 }
 
-
+%spin-ball {
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    position: absolute;
+    left: 45%;
+    visibility: hidden;
+}
